--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Sample client for an Arweave testnet with bundling enabled",
   "main": "index.js",
   "scripts": {
-    "test": "ts-node client/client.ts"
+    "test": "ts-node client/client.ts",
+    "upload": "ts-node client/client_main.ts"
   },
   "keywords": [
     "arweave",
