--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "abhavk",
   "license": "ISC",
   "devDependencies": {
+    "ts-node": "^10.9.1",
     "typescript": "^3.8.3"
   },
   "dependencies": {
